bpo-30242: resolve some undefined behaviours in struct (#1418)